# THRIVE_HACK

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-DOCS.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  governance-review.yml  project-idea.yml
.github/workflows/: ci.yml
dashboard/: README.md  app.py  requirements.txt
docs/: branch_protection.md  contributor_workflow.md  data_governance.md  data_model.md  licensing.md  maintainer_launch_checklist.md  project_brief.md  public_positioning.md
governance/: README.md  builder_readiness_guide.md  contribution_policy.md  ethics_checklist.md  partner_onboarding.md  privacy_preserving_patterns.md
governance/consent_templates/: README.md  informed_consent.md
governance/data_access_policies/: README.md  data_access_policy.md
inspirations/: README.md  project_inspirations.md
issues/: README.md  challenge_statements.md  issue_backlog.md
notebooks/: 01_explore_synthetic_data.ipynb  02_data_quality_walkthrough.ipynb  03_research_questions_starter.ipynb  README.md  requirements.txt
schema/: README.md  data_dictionary.json  survey_schema.json
src/menstrual_health_open/: __init__.py  cli.py  synthetic.py  validation.py
synthetic-data/: LICENSE  README.md  generate.py  sample_20.csv
synthetic-data/datasets/: sample_50.csv  survey_responses_1000.csv  (+2 more)
tests/: test_synthetic_and_validation.py
validation/: README.md  quality_rules.json  validate_dataset.py
