[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "menstrual-health-open"
version = "0.1.0"
description = "Open-source infrastructure starter kit for ethical menstrual health research"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Mavara Research Collective" }
]
dependencies = []
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
mho = "menstrual_health_open.cli:main"
mho-generate = "menstrual_health_open.cli:generate_command"
mho-validate = "menstrual_health_open.cli:validate_command"

[tool.hatch.build.targets.wheel]
packages = ["src/menstrual_health_open"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
